--- a/buttons.html
+++ b/buttons.html
@@ -1,84 +1,24 @@
-<style>
+<!DOCTYPE html>
+<html>
 
-    .subscribe-button{
-        background-color: rgb(200, 0, 0);
-        color: white;
-        border: none;
-        height: 36px;
-        width: 105px;
-        border-radius: 2px;
-        cursor: pointer;
-        margin-right: 8px;
-        transition: opacity 0.15s;
-
-    }
-    .subscribe-button:hover{
-       opacity:0.8;
-    }
-
-    .subscribe-button:active{
-        opacity: 0.5;
-
-    }
+<head>
+    <title>Buttons-Practice</title>
 
 
-    .join-button{
-        background-color:white ;
-        border-color:rgb(41, 118, 211);
-        border-style: solid;
-        border-width: 1px;
-        color:rgb(41,118,211);
-        height:36px;
-        width: 62px;
-        border-radius: 2px;
-        cursor: pointer;
-        transition: background-color 0.15s,
-        color 0.15s;
-        
+    <link rel="stylesheet" href="styles/buttons.css">
 
-    }
+</head>
 
-    .join-button:hover{
-        background-color: rgb(41,118,211);
-        color:white;
-    }
-    .join-button:active{
-        opacity: 0.7;
-    }
+<body>
+    <button class="subscribe-button">
+        SUBSCRIBE
+    </button>
+    <button class="join-button">
+        JOIN</button>
 
-    .tweet-button{
-        background-color: rgb(2, 158, 255);
-        color: white;
-        border:none;
-        height:36px;
-        width:74px;
-        border-radius: 18px;
-        font-weight: bold;
-        font-size:15px ;
-        cursor: pointer;
-        margin-left: 8px;
-        transition: box-shadow 0.15s;
-        
+    <button class="tweet-button">
+        Tweet
+    </button>
+</body>
 
-    }
-
-    .tweet-button:hover{
-        box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
-
-    }
-
-
-
-</style>
-
-
-
-<button class="subscribe-button">
-    SUBSCRIBE
-</button>
-<button class="join-button">
-    JOIN</button>
-
-<button class="tweet-button">
-    Tweet
-</button>    
+</html>
