--- a/website.html
+++ b/website.html
@@ -1,12 +1,23 @@
+<!DOCTYPE html>
+<html>
 
-<p>
-    paragraph of text
-</p>
+<head>
+    <title>First Website</title>
 
-<button>
-    Hello
-</button>
+</head>
 
-<a href="https://www.youtube.com/" target="_blank">
-    Link to youtube
-</a>
+<body>
+    <p>
+        paragraph of text
+    </p>
+
+    <button>
+        Hello
+    </button>
+
+    <a href="https://www.youtube.com/" target="_blank">
+        Link to youtube
+    </a>
+</body>
+
+</html>
