--- a/position.html
+++ b/position.html
@@ -17,6 +17,7 @@
             left:0;
             right:0;
             height:50px;
+            z-index: 100;
             ">header</div>
 
 
@@ -29,6 +30,24 @@
             top:50px;
             width:72px;">
         sidebar
+            <div style="
+        position:absolute;
+        background-color: red;
+        color:white;
+        top:0px;
+        right:0px;
+        ">
+        X
+    </div>
+    </div>
+    <div style="
+        position:absolute;
+        background-color: red;
+        color:white;
+        top:60px;
+        right:10px;
+        ">
+        absolute
     </div>
     <div style="
         background-color:lightblue;
@@ -40,7 +59,17 @@
         background-color:lightpink;
         height: 200px;
         width:200px;
-        ">div2</div>
+        position:relative;
+        ">
+            <div style="
+        position:absolute;
+        background-color: black;
+        color:white;
+        bottom:10px;
+        right:10px;
+        ">
+        5:00
+    </div>div2</div>
 </body>
 
 </html>
